# project-chiral-ai-service

./: .gitignore  pyproject.toml  update-api.sh
prisma/: schema.prisma
project_chiral_ai_service/: constant.py  faiss_config.json  main.py
project_chiral_ai_service/api/: graph_api_README.md  graph_client.py
project_chiral_ai_service/api/.openapi-generator/: FILES
project_chiral_ai_service/api/graph_api/: __init__.py
project_chiral_ai_service/api/graph_api/api/: default_api.py
project_chiral_ai_service/api/graph_api/docs/: DefaultApi.md
project_chiral_ai_service/api/graph_api/test/: test_default_api.py
project_chiral_ai_service/entity/: __init__.py  entity_recognizer.py  linker.py  recognizer.py  resolver.py  template.py
project_chiral_ai_service/redis_client/: constant.py  redis_client.py
project_chiral_ai_service/retriever/: document_store.py  retriever.py
project_chiral_ai_service/rmq_client/: client.py  handle_request.py
project_chiral_ai_service/schema/: __init__.py  lang_type.py
project_chiral_ai_service/subscribe/: __init__.py  event_done.py
project_chiral_ai_service/summarize/: __init__.py  summarizer.py  template.py  utils.py
tests/: entity.py  pydantic.py  summarizer.py
